# git-bfg-cleaner

./: .gitignore  Cargo.toml
.github/workflows/: publish.yml
projects/git-bfg/: Cargo.toml  Readme.md
projects/git-bfg/src/: errors.rs  main.rs
projects/git-bfg/src/cleaner/: blob_item.rs  mod.rs
projects/git-bfg/src/cmd/: mod.rs
