[package]
name = "git-bfg"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = "3.0.13"
git2 = "0.13.25"
project-root = "0.2.2"
sorted-vec = "0.7.0"
byte-unit = "4.0.13"

[dev-dependencies]

[features]
default = []

[[bin]]
name = "bfg"
path = "src/main.rs"

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
